Twitter client complete. ingested tweets successfully.

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,13 @@
             <version>1.7.5</version>
         </dependency>
 
+            <dependency>
+                <groupId>com.twitter</groupId>
+                <artifactId>hbc-core</artifactId> <!-- or hbc-twitter4j -->
+                <version>2.2.0</version> <!-- or whatever the latest version is -->
+            </dependency>
+
+
 
 
 
